# habit-tracker-telegram-bot

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  auth.py  crud.py  database.py  main.py  models.py  pyproject.toml  schemas.py
backend/migrations/: env.py
backend/migrations/versions/: 3c717780d279_create_initial_habit_tracker_tables_.py
frontend/: Dockerfile  bot.py  pyproject.toml
scheduler/: Dockerfile  main.py  pyproject.toml
