[project]
name = "frontend-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "angelina_kuchinskaia",email = "6882109247@my.lerna.by"}
]
requires-python = ">=3.13"
dependencies = [
    "pytelegrambotapi (>=4.33.0,<5.0.0)",
    "requests (>=2.33.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
