[project]
name = "habits-scheduler"
version = "0.1.0"
description = ""
package-mode = false
authors = [
    {name = "angelina_kuchinskaia",email = "6882109247@my.lerna.by"}
]
requires-python = ">=3.13"
dependencies = [
    "apscheduler (>=3.11.2,<4.0.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

